--- a/index.html
+++ b/index.html
@@ -1,22 +1,32 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PollCreator - Create and Share Polls Effortlessly</title>
-    <meta name="description" content="Build engaging polls, collect instant feedback, and visualize results with beautiful charts. Perfect for teams, educators, and content creators." />
-    <meta name="author" content="PollCreator" />
+    <title>PollHub</title>
+    <meta
+      name="description"
+      content="Create and share polls. Collect instant feedback and view results easily."
+    />
+    <meta name="author" content="PollHub" />
 
-    <meta property="og:title" content="PollCreator - Create and Share Polls Effortlessly" />
-    <meta property="og:description" content="Build engaging polls, collect instant feedback, and visualize results with beautiful charts. Perfect for teams, educators, and content creators." />
+    <link rel="icon" type="image/png" href="/poll.png" />
+
+    <meta property="og:title" content="PollHub" />
+    <meta
+      property="og:description"
+      content="Create and share polls. Collect instant feedback and view results easily."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/poll.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:title" content="PollCreator - Create and Share Polls Effortlessly" />
-    <meta name="twitter:description" content="Build engaging polls, collect instant feedback, and visualize results with beautiful charts." />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="PollHub" />
+    <meta
+      name="twitter:description"
+      content="Create and share polls. Collect instant feedback and view results easily."
+    />
+    <meta name="twitter:image" content="/poll.png" />
   </head>
 
   <body>
